# btrack

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  2  CHANGELOG.rst  CITATION.cff  CONFIGURATION.md  LICENSE.md  MANIFEST.in  Makefile  README.md  TODO.rst  build.sh  codecov.yml  default.metallib  environment.yml  mkdocs.yml  napari.yaml  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  tox.ini  woking_makefile.make  working_build.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/build-btrack/: action.yml
.github/workflows/: build.yml  build_wheels.yml  build_wheels_test_and_deploy.yml  checks.yml  deploy.yml  linting.yml  napari-hub-preview.yml  test.yml  test_and_deploy.yml  update_project_board.yml
.napari-hub/: DESCRIPTION.md  config.yml
btrack/: LICENSE  Makefile  README.md  __init__.py  _localization.py  _segmentation.py  btypes.py  config.py  constants.py  core.py  dataio.py  datasets.py  libwrapper.py  metrics.py  models.py  napari.yaml  render.py  utils.py
btrack/include/: bayes.h  belief.h  defs.h  features.h  hyperbin.h  hypothesis.h  inference.h  manager.h  motion.h  pdf.h  tracker.h  tracklet.h  types.h  updates.h  wrapper.h
btrack/io/: __init__.py  _geff.py  _localization.py  exporters.py  hdf.py  importers.py  utils.py
btrack/libs/: libtracker.dylib
btrack/models/: brownian_motion.json  cell_config.json  cell_hypothesis.json  constant_velocity.json
btrack/napari/: .gitignore  .pre-commit-config.yaml  __init__.py  config.py  constants.py  main.py  napari.yaml  pyproject.toml  reader.py  sync.py  writer.py
btrack/napari/_tests/: test_dock_widget.py
btrack/napari/examples/: show_btrack_widget.py
btrack/napari/napari_btrack/: __init__.py
btrack/napari/tests/: test_btrack_reader.py
btrack/napari/widgets/: __init__.py  _general.py  _hypothesis.py  _motion.py  _optimiser.py  create_ui.py  io.py
btrack/optimise/: hypothesis.py  lineage.py  optimiser.py
btrack/src/: Makefile  bayes.cc  belief.cu  belief.metal  belief.mm  hyperbin.cc  hypothesis.cc  hypothesis.h  hypothesis.hpp  inference.cc  inference.h  inference.hpp  interface.cc  manager.cc  manager.h  manager.hpp  motion.cc  motion.cpp  motion.h  motion.hpp  pdf.cc  tracker.cc  tracker.h  tracker.hpp  tracklet.cc  tracklet.h  tracklet.hpp  types.h  types.hpp  wrapper.cc  wrapper.h  wrapper.hpp
docs/: Makefile  about.rst  api.rst  conf.py  index.md  index.rst  requirements.txt
docs/dev_guide/: index.rst
docs/user_guide/: configuration.rst  ctc_configs.rst  index.rst  installation.rst  large_datasets.rst  napari.rst  optuna.rst  optuna_script.rst  saving_tracks.rst  simple_example.rst  using_features.rst
examples/: README.md  example_optuna.py  example_track_data.csv  example_track_graph.txt  example_track_properties.csv  example_tracking_pipeline-features.ipynb  example_tracking_pipeline.ipynb  napari_btrack.ipynb  napari_example.csv  objects.csv  segmentation_to_btrack_to_napari.ipynb  show_btrack_widget.py
models/: cell_config.json  cell_config_flat.json  particle_config.json  test_config.json  upscale_cell_config.json
napari_btrack/: __init__.py  _dock_widget.py  config.py  napari.yaml  track.py
napari_btrack/_tests/: test_dock_widget.py
napari_btrack/widgets/: create_ui.py
tests/: _utils.py  conftest.py  test_btrack_mps.py  test_config.py  test_examples.py  test_io.py  test_models.py  test_shared_lib.py  test_tracker.py  test_tracklets.py  test_utils.py
tests/_test_data/: test_data.csv  test_graph.json  test_ground_truth.json  tracks.h5  update_segmentation_data.h5
tests/napari/: test_dock_widget.py  test_reader.py
