[metadata]
name = btrack
author = Alan R. Lowe
author_email = a.lowe@ucl.ac.uk
url = https://github.com/quantumjot/BayesianTracker
project_urls =
    Bug Tracker = https://github.com/quantumjot/BayesianTracker/issues
    Documentation = https://btrack.readthedocs.io/en/stable/
    Source Code = https://github.com/quantumjot/BayesianTracker
    User Support = https://github.com/quantumjot/BayesianTracker/issues
description-file = README.md
classifier =
  Operating System :: OS Independent
  Programming Language :: C++
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Bio-Informatics
  Topic :: Scientific/Engineering :: Image Recognition
  Framework :: napari

[options.entry_points]
napari.manifest =
    btrack = btrack:napari.yaml

# make sure it gets included in your package
[options.package_data]
example-plugin = napari.yaml

[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)
# E731 do not assign a lambda function
# W503 Line break occurred before a binary operator
# C901 McCabe complexity test.
ignore = E203, W503, E501, E731, C901
max-line-length = 79
max-complexity = 18
exclude = __init__.py|examples
per-file-ignores =
    # imported but unused
    __init__.py: F401
