[metadata]
name = btrack
version = file: btrack/VERSION.txt
author = Alan R. Lowe
author_email = a.lowe@ucl.ac.uk
url = https://github.com/quantumjot/BayesianTracker
project_urls =
    Bug Tracker = https://github.com/quantumjot/BayesianTracker/issues
    Documentation = https://btrack.readthedocs.io/en/stable/
    Source Code = https://github.com/quantumjot/BayesianTracker
    User Support = https://github.com/quantumjot/BayesianTracker/issues
description = A framework for Bayesian multi-object tracking
long_description = file: README.md
classifier =
  Programming Language :: C++
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Bio-Informatics
  Topic :: Scientific/Engineering :: Image Recognition
  Framework :: napari
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: Unix
  Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
  cvxopt>=1.2.0
  h5py>=2.10.0
  numpy>=1.17.3
  pooch>=1.0.0
  pydantic>=1.9.0
  scikit-image>=0.16.2
  scipy>=1.3.1

[options.extras_require]
napari =
  napari>=0.4.16
docs =
  numpydoc
  sphinx
  sphinx-automodapi
  sphinx-panels
  sphinx_rtd_theme

[options.package_data]
btrack =
  napari.yaml
  libs/libtracker*
  VERSION.txt

[options.entry_points]
napari.manifest =
    btrack = btrack: napari.yaml

[tox]
isolated_build: true

[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)
# E731 do not assign a lambda function
# W503 Line break occurred before a binary operator
# C901 McCabe complexity test.
ignore = E203, W503, E501, E731, C901
max-line-length = 79
max-complexity = 18
exclude = __init__.py|examples
per-file-ignores =
    # imported but unused
    __init__.py: F401
