[metadata]
name = btrack
version = file: btrack/VERSION.txt
author = Alan R. Lowe
author_email = a.lowe@ucl.ac.uk
url = https://github.com/quantumjot/BayesianTracker
project_urls =
  Bug Tracker = https://github.com/quantumjot/BayesianTracker/issues
  Documentation = https://btrack.readthedocs.io/en/stable/
  Source Code = https://github.com/quantumjot/BayesianTracker
  User Support = https://github.com/quantumjot/BayesianTracker/issues
description = A framework for Bayesian multi-object tracking
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
  Programming Language :: C++
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Bio-Informatics
  Topic :: Scientific/Engineering :: Image Recognition
  Framework :: napari
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: Unix
  Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
  cvxopt>=1.2.0
  h5py>=2.10.0
  numpy>=1.17.3
  pooch>=1.0.0
  pydantic>=1.9.0
  scikit-image>=0.16.2
  scipy>=1.3.1

[options.extras_require]
napari =
  napari>=0.4.16
docs =
  numpydoc
  sphinx
  sphinx-automodapi
  sphinx-panels
  sphinx_rtd_theme

[options.package_data]
btrack =
  napari.yaml
  libs/libtracker*
  VERSION.txt

[options.entry_points]
napari.manifest =
  btrack = btrack: napari.yaml

[tox]
isolated_build: true
